DDI-Lifecycle/3.3/model/_sources/item-types/Concept/index.rst.txt
Concept
-------

Describes a concept per ISO/IEC 11179. In addition to the standard name, label, and description, can identify similar concepts, the concept which this concept is a subclass of, a concept that is used to characterize this concept, and a reference to the Universe associated with this concept. It is the linking of a concept to a specific universe (object) that defines this as a data element concept.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "ConceptName",":doc:`/composite-types/NameType/index`","0..n","A name for the Concept. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "Label",":doc:`/composite-types/LabelType/index`","0..n","A display label for the Concept. Supports multiple language versions of the same content as well as optional formatting of the content. Repeat for labels with different content, for example, labels with differing length limitations."
   "Description",":doc:`/composite-types/StructuredStringType/index`","0..1","A description of the content and purpose of the Concept. Supports multiple language versions of the same content as well as optional formatting of the content."
   "SimilarConcept",":doc:`/composite-types/SimilarConceptType/index`","0..n","A reference to a concept expressing a similar idea plus a description of the differences. Used to assist in disambiguation of concepts."
   "SubclassOfReference",":doc:`/item-types/Concept/index`","0..n","Reference to a Concept that is used for qualifying this data element concept. The referenced Concept should have its isCharacteristic attribute set to true."
   "ExcludesConceptReference",":doc:`/item-types/Concept/index`","0..n","Reference to a Concept that is used for qualifying what is excluded from the Concept's definition."
   "IncludesConceptReference",":doc:`/item-types/Concept/index`","0..n","Reference to a Concept that is used for qualifying this is included in the Concept's definition."
   "IsCharacteristic","boolean","0..1","If set to ""true"" this concept is used to describe a characteristic of another concept."

Properties Inherited from Versionable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference",":doc:`/item-types/Agent/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "RelatedOtherMaterialReference",":doc:`/item-types/OtherMaterial/index`","0..n","The inclusion of an existing OtherMaterial by reference. Use for any type of OtherMaterial not specifically addressed by an inline description for such as ExternalAid in QuestionItem."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."
   "IsPublished","boolean","0..1","Indicates that the maintainable will not be changed without versioning, and is a stable target for referencing."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/item-types/Versionable/index`
    * **Concept**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/Category/index`
* :doc:`/item-types/CategoryGroup/index`
* :doc:`/item-types/ClassificationItem/index`
* :doc:`/item-types/ClassificationLevel/index`
* :doc:`/item-types/CodeListGroup/index`
* :doc:`/item-types/ConceptGroup/index`
* :doc:`/item-types/ConceptScheme/index`
* :doc:`/item-types/ConceptualVariable/index`
* :doc:`/item-types/ConceptualVariableGroup/index`
* :doc:`/item-types/ControlConstructGroup/index`
* :doc:`/item-types/DevelopmentActivityGroup/index`
* :doc:`/item-types/GeographicLocationGroup/index`
* :doc:`/item-types/GeographicStructureGroup/index`
* :doc:`/item-types/Group/index`
* :doc:`/item-types/InstructionGroup/index`
* :doc:`/item-types/InstrumentGroup/index`
* :doc:`/item-types/LocalHoldingPackage/index`
* :doc:`/item-types/ManagedRepresentationGroup/index`
* :doc:`/item-types/MeasurementGroup/index`
* :doc:`/item-types/MeasurementItem/index`
* :doc:`/item-types/NCubeGroup/index`
* :doc:`/item-types/OrganizationGroup/index`
* :doc:`/item-types/OtherMaterialGroup/index`
* :doc:`/item-types/PhysicalInstanceGroup/index`
* :doc:`/item-types/PhysicalStructureGroup/index`
* :doc:`/item-types/ProcessingEventGroup/index`
* :doc:`/item-types/ProcessingInstructionGroup/index`
* :doc:`/item-types/QualityStandardGroup/index`
* :doc:`/item-types/QualityStatementGroup/index`
* :doc:`/item-types/QuestionBlock/index`
* :doc:`/item-types/QuestionGrid/index`
* :doc:`/item-types/QuestionGroup/index`
* :doc:`/item-types/QuestionItem/index`
* :doc:`/item-types/RecordLayoutGroup/index`
* :doc:`/item-types/RepresentedVariable/index`
* :doc:`/item-types/RepresentedVariableGroup/index`
* :doc:`/item-types/ResourcePackage/index`
* :doc:`/item-types/SamplingInformationGroup/index`
* :doc:`/item-types/StudyUnit/index`
* :doc:`/item-types/SubUniverseClass/index`
* :doc:`/item-types/UnitType/index`
* :doc:`/item-types/UnitTypeGroup/index`
* :doc:`/item-types/Universe/index`
* :doc:`/item-types/UniverseGroup/index`
* :doc:`/item-types/Variable/index`
* :doc:`/item-types/VariableGroup/index`
* :doc:`/composite-types/ComplianceDefinitionType/index`
* :doc:`/composite-types/ComplianceType/index`
* :doc:`/composite-types/SimilarConceptType/index`
* :doc:`/composite-types/SourceRepresentationType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/Concept.svg

